--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,4 @@
-footer {
+/* footer {
     width: 100%;
     overflow: hidden;
     color: white;
@@ -7,5 +7,13 @@ footer {
 .bottom {
     opacity: 0.75;
     font-size: 1.1rem;
-    padding: 3rem 0;
+    padding: 4rem 0;
 }
+
+return (
+    <footer className="bg-gray-800 ">
+        <div>
+            <p className={styles['bottom']}>All rights reserved | Copyright &copy; {new Date().getFullYear()} </p>
+        </div>
+    </footer>
+); */
