--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,18 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,400);
 
 header {
+    background-color: #343e48;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    min-width: 535px;
+    background-color: #343e48;
+    position: relative;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
 }
 .nav-items {
     position: relative;
