--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,6 +11,7 @@ nav {
     min-width: 535px;
     background-color: #343e48;
     position: relative;
+    position: fixed;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
 }
 .nav-items {
