--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,6 +7,9 @@
     justify-content: space-around;
     align-items: center;
     padding: 0rem 4rem 0 3rem;
+    position: fixed;
+    bottom: 0;
+    z-index: 10000;
 }
 
 .footer-content {
