--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     gap: 100px;
     margin-top: 100px;
+    padding-bottom: 200px;
 }
 
 .home-title {
@@ -16,8 +17,20 @@
     text-transform: uppercase;
     padding: 0;
     letter-spacing: 0px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #343e48;
+    text-align: center;
+}
+
+.latest-topics-title {
+    font-size: 2.5rem;
+    margin: 0 auto;
+    position: relative;
+    font-weight: 700;
+    line-height: 1.1;
+    text-transform: uppercase;
+    padding: 0;
+    letter-spacing: 0px;
+    color: #3f4c58;
     text-align: center;
 }
 
