--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -58,3 +58,63 @@ a:hover {
     transition-duration: 200ms;
     /* background-color: rgb(29 78 216); */
 }
+
+.profile {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    margin-left: 3rem;
+}
+
+.dropdown {
+    position: absolute;
+    right: 0;
+    top: 60px;
+    z-index: 10;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-top: 0.5rem;
+    background-color: #ffffff;
+    transform-origin: top right;
+    width: 12rem;
+    border-radius: 0.375rem;
+    box-shadow: var(--tw-ring-inset) 0 0 0
+        calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    --ring-color: #000000;
+    --ring-opacity: 0.05;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.profile-ctn {
+    position: relative;
+    margin-left: 0.75rem;
+}
+
+.profile-btn {
+    background-color: #1f2937;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    border-radius: 9999px;
+}
+
+.profile-btn:focus {
+    box-shadow: var(--tw-ring-inset) 0 0 0
+        calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    --ring-color: #ffffff;
+    --ring-offset-width: 2px;
+    box-shadow: 0 0 0 var(--ring-offset-width) var(--ring-offset-color),
+        var(--ring-shadow);
+    --ring-offset-color: #1f2937;
+}
+
+.profile-img {
+    width: 3rem;
+    height: 2.5rem;
+    border-radius: 9999px;
+}
+
+.logged-ul {
+    display: flex;
+    align-items: center;
+}
