--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -1,6 +1,179 @@
-.password-icon{
+#register {
+    width: 100%;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    height: 100%;
+    display: flex;
+    --transform-scale-x: 0.95;
+    --transform-scale-y: 0.95;
+    color: #1f2937;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
 
+#register .img-ctn {
+    width: 50%;
+}
+
+#register .content-ctn {
+    width: 25%;
+}
+
+#register .title {
+    margin-bottom: 4rem;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+#register .input-ctn {
+    margin-bottom: 1.5rem;
     position: relative;
-    bottom: 37px;
-    left: 371px;
+}
+
+#register .input {
+    padding: 0.5rem 1rem;
+    background-clip: padding-box;
+    transition-property: background-color, border-color, color, fill, stroke,
+        opacity, box-shadow, transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    color: #374151;
+    font-size: 1.25rem;
+    width: 100%;
+    border-radius: 0.25rem;
+    border-width: 1px;
+    border-color: #d1d5db;
+    border-style: solid;
+}
+
+#register .input:focus {
+    color: #374151;
+    border-color: #2563eb;
+    outline: 0;
+}
+
+#register .label {
+    font-size: 20px;
+}
+
+#register .alert {
+    margin-top: 0.25rem;
+    margin-left: 0.25rem;
+    color: #ef4444;
+    font-weight: 500;
+    letter-spacing: 0.025em;
+}
+
+#register .tac-ctn {
+    margin-bottom: 4px;
+}
+
+#register .tac-input {
+    background-color: #f9fafb;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 0.25rem;
+    border-width: 1px;
+    border-color: #d1d5db;
+    margin-right: 8px;
+}
+
+#register span {
+    color: #1f2937;
+    font-weight: 300;
+}
+
+#register .link {
+    padding: 0px;
+    display: inline-block;
+    letter-spacing: 0px;
+    padding: 8px;
+    font-size: 15px;
+}
+
+#register .link:hover {
+    color: #1e40af;
+    text-decoration: underline;
+}
+
+#register .btn {
+    display: inline-block;
+    padding: 0.75rem 1.75rem;
+    background-color: #2563eb;
+    color: #ffffff;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 500;
+    line-height: 1.375;
+    text-transform: uppercase;
+    border-radius: 0.25rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+        0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    width: 100%;
+    cursor: pointer;
+}
+
+#register .btn:hover {
+    background-color: #1d4ed8;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+#register .btn:focus {
+    background-color: #1d4ed8;
+    box-shadow: var(--tw-ring-inset) 0 0 0
+        calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    outline: 0;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+#register .btn:active {
+    background-color: #1e40af;
+    transition-property: background-color, border-color, color, fill, stroke,
+        opacity, box-shadow, transform;
+    transition-duration: 150ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    width: 100%;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+#register .log-link-ctn {
+    display: flex;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+    margin-bottom: 1.5rem;
+    justify-content: center;
+    align-items: center;
+}
+
+#register .login-link {
+    color: #2563eb;
+}
+
+#register .login-link:hover {
+    color: #1e40af;
+}
+
+#register .login-link:focus {
+    color: #1d4ed8;
+}
+
+#register .login-link:active {
+    transition-property: background-color, border-color, color, fill, stroke,
+        opacity, box-shadow, transform;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    color: #1e40af;
+}
+
+.password-icon {
+    position: absolute;
+    right: 8px;
+    bottom: 12px;
 }
