--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -21,8 +21,39 @@
     text-align: center;
 }
 
-.latest-topics-title {
+.home-quote {
     font-size: 2.5rem;
+    margin: 0 auto;
+    position: relative;
+    font-weight: 700;
+    line-height: 1.1;
+    text-transform: uppercase;
+    padding: 0;
+    letter-spacing: 0px;
+    color: #343e48;
+    text-align: center;
+    font-style: italic;
+    font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.home-quote-author {
+    font-size: 1.5rem;
+    margin: 0 auto;
+    position: relative;
+    font-weight: 400;
+    line-height: 1.1;
+    text-transform: uppercase;
+    padding: 0;
+    letter-spacing: 0px;
+    color: #343e48;
+    text-align: left;
+    /* TODO */
+    margin-top: -90px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.latest-topics-title {
+    font-size: 1.5rem;
     margin: 0 auto;
     position: relative;
     font-weight: 700;
