--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -127,6 +127,10 @@
         0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
+/* #register .btn:disabled {
+    opacity: 0.5;
+} */
+
 #register .btn:focus {
     background-color: #1d4ed8;
     box-shadow: var(--tw-ring-inset) 0 0 0
