--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -54,7 +54,7 @@
 
 .latest-topics-title {
     font-size: 1.5rem;
-    margin: 0 auto;
+    margin: 1rem auto;
     position: relative;
     font-weight: 700;
     line-height: 1.1;
