--- a/src/shared/Spinner.module.css
+++ b/src/shared/Spinner.module.css
@@ -1,9 +1,9 @@
 .ring {
-    position: absolute;
-    margin-top: 90px;
-    top: 50%;
+    margin: 90px auto;
+    position: relative;
+    /* top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     width: 150px;
     height: 150px;
     background: transparent;
@@ -13,10 +13,10 @@
     line-height: 150px;
     font-family: sans-serif;
     font-size: 20px;
-    color: #b9ad05;
+    color: #9e9406;
     letter-spacing: 4px;
     text-transform: uppercase;
-    text-shadow: 0 0 10px #b9ad05;
+    text-shadow: 0 0 10px #9e9406;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .ring:before {
@@ -27,8 +27,8 @@
     width: 100%;
     height: 100%;
     border: 3px solid transparent;
-    border-top: 3px solid #b9ad05;
-    border-right: 3px solid #b9ad05;
+    border-top: 3px solid #9e9406;
+    border-right: 3px solid #9e9406;
     border-radius: 50%;
     animation: animateC 2s linear infinite;
 }
