--- a/src/components/ChangePassword/ChangePassword.module.css
+++ b/src/components/ChangePassword/ChangePassword.module.css
@@ -46,10 +46,11 @@
 
 #change-password .input-ctn {
     display: flex;
-    margin-bottom: 1rem;
     color: #6b7280;
     border-radius: 0.25rem;
     border-width: 1px;
+    margin-bottom: 1.5rem;
+    position: relative;
 }
 
 #change-password .input {
@@ -71,4 +72,105 @@
     color: #374151;
     border-color: #2563eb;
     outline: 0;
+}
+
+#change-password .btn-ctn {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-color: #2563eb;
+    color: #ffffff;
+    border-radius: 0.25rem;
+    border-width: 1px;
+    cursor: pointer;
+    text-align: center;
+}
+
+#change-password .btn {
+    display: inline-block;
+    padding: 0.75rem 1.75rem;
+    background-color: #2563eb;
+    color: #ffffff;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 500;
+    line-height: 1.375;
+    text-transform: uppercase;
+    border-radius: 0.25rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+        0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    width: 100%;
+}
+
+#change-password .btn:disabled {
+    opacity: 0.5;
+}
+
+#change-password .btn:hover,
+.btn-ctn:hover {
+    background-color: #1d4ed8;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+#change-password .btn:focus,
+.btn-ctn:hover {
+    background-color: #1d4ed8;
+    box-shadow: var(--tw-ring-inset) 0 0 0
+        calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    outline: 0;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+#change-password .btn:active,
+.btn-ctn:hover {
+    background-color: #1e40af;
+    transition-property: background-color, border-color, color, fill, stroke,
+        opacity, box-shadow, transform;
+    transition-duration: 150ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    width: 100%;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+#change-password .link {
+    color: #2563eb;
+    text-align: center;
+    padding-left: 0px;
+}
+
+#change-password .link:hover {
+    color: #1e40af;
+}
+
+#change-password .link:focus {
+    color: #1d4ed8;
+}
+
+#change-password .link:active {
+    transition-property: background-color, border-color, color, fill, stroke,
+        opacity, box-shadow, transform;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    color: #1e40af;
+}
+
+#change-password span {
+    color: #1f2937;
+    font-weight: 300;
+}
+
+#change-password .alert {
+    margin-top: 0.25rem;
+    margin-left: 0.25rem;
+    color: #ef4444;
+    font-weight: 500;
+    letter-spacing: 0.025em;
+}
+
+#change-password .password-icon {
+    position: absolute;
+    right: 8px;
+    bottom: 12px;
 }
