--- a/src/components/Causes/Details/Details.module.css
+++ b/src/components/Causes/Details/Details.module.css
@@ -25,6 +25,70 @@
 .details-content-container {
     display: flex;
     flex-direction: column;
+    padding: 1.5rem;
+    margin-top: 1rem;
+    color: #4b5563;
+}
+
+.content-elem {
+    color: #6b7280;
+}
+
+.content-elem-creator {
+    display: flex;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    flex-direction: row;
+    gap: 8px;
+}
+.content-title {
+    margin-right: 0.5rem;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.content-profile-link {
+    padding: 0px;
+    align-self: center;
+}
+
+.content-profile-link:hover {
+    color: #1e40af;
+    font-size: 16px;
+    transition: ease-in-out 200ms;
+}
+
+.content-profile-link:focus {
+    color: #1d4ed8;
+}
+
+.content-profile-link:active {
+    transition-property: background-color, border-color, color, fill, stroke,
+        opacity, box-shadow, transform;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    color: #1e40af;
+}
+
+.creator-img {
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #e0e7ff;
+    transition-property: background-color, border-color, color, fill, stroke,
+        opacity, box-shadow, transform;
+    transition-duration: 500ms;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 9999px;
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+}
+
+.creator-img:hover {
+    width: 5.5rem;
+    height: 5.5rem;
+    transition: ease-in-out 200ms;
 }
 
 /* grid-area: auto; */
