--- a/src/components/Causes/Details/Details.module.css
+++ b/src/components/Causes/Details/Details.module.css
@@ -91,4 +91,24 @@
     transition: ease-in-out 200ms;
 }
 
+.down-part-ctn {
+    display: flex;
+    overflow: hidden;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    background-color: #ffffff;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 0.5rem;
+    border-width: 1px;
+}
+
+.down-part-ctn .description {
+    display: flex;
+    padding: 1.5rem;
+    margin-top: 1rem;
+    color: #6b7280;
+    align-items: center;
+}
+
 /* grid-area: auto; */
