--- a/src/components/Causes/Details/Details.module.css
+++ b/src/components/Causes/Details/Details.module.css
@@ -1,10 +1,20 @@
+#details {
+    box-shadow: inset 5px 5px 5px #0003, inset -5px -5px 15px #ffffff1a,
+        5px 5px 15px #0000004d, -5px -5px 15px #ffffff1a;
+    border-radius: 15px;
+    transition: 0.5s;
+    max-width: 880px;
+    margin: 8rem auto;
+    margin-bottom: 14rem;
+}
+
 .details-card-container {
     display: flex;
     overflow: hidden;
     background-color: #ffffff;
     flex-direction: column;
     border-radius: 0.5rem;
-    border-width: 1px;
+    border-width: 3px;
 }
 
 .details-grid {
@@ -15,11 +25,13 @@
 .details-img-container {
     display: flex;
     flex-direction: column;
-    border-bottom-width: 1px;
+    border-bottom-width: 0px;
+    border-right-width: 3px;
 }
 
 .details-img {
     border-radius: 4px;
+    width: 95%;
 }
 
 .details-content-container {
@@ -45,7 +57,7 @@
     margin-right: 0.5rem;
     font-size: 0.75rem;
     line-height: 1rem;
-    font-weight: 600;
+    font-weight: 700;
     text-transform: uppercase;
 }
 
@@ -79,45 +91,43 @@
     transition-property: background-color, border-color, color, fill, stroke,
         opacity, box-shadow, transform;
     transition-duration: 500ms;
-    width: 4rem;
-    height: 4rem;
+    width: 2.5rem;
+    height: 2.5rem;
     border-radius: 9999px;
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 }
 
 .creator-img:hover {
-    width: 5.5rem;
-    height: 5.5rem;
+    width: 3rem;
+    height: 3rem;
     transition: ease-in-out 200ms;
 }
 
 .down-part-ctn {
     display: flex;
     overflow: hidden;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
     background-color: #ffffff;
     flex-direction: column;
     justify-content: center;
     border-radius: 0.5rem;
-    border-width: 1px;
+    overflow-wrap: break-word;
 }
 
 .down-part-ctn .description {
     display: flex;
     padding: 1.5rem;
-    margin-top: 1rem;
     color: #6b7280;
     align-items: center;
+    word-break: break-all;
 }
 
 .down-part-ctn .btns-ctn {
     display: grid;
     background-color: #f9fafb;
-    border: 1px solid #6b7280;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(3, 180px);
+    gap: 150px;
+    margin: 1rem auto;
     color: #64748b;
-    margin-bottom: 5rem;
 }
 
 .btns-ctn .btn {
@@ -130,11 +140,15 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border: 1px solid #6b7280;
+    border-radius: 30px;
+    height: 50px;
+    box-shadow: -1px -1px 6px 1px #0003, inset -5px -5px 15px #ffffff1a,
+        5px 5px 15px #0000004d, -5px -5px 15px #ffffff1a;
 }
 
 .btns-ctn .update-btn {
     color: #079c9a;
+    padding: 0px;
 }
 
 .btns-ctn .remove-btn {
