--- a/src/components/Causes/Details/Details.module.css
+++ b/src/components/Causes/Details/Details.module.css
@@ -4,7 +4,7 @@
     border-radius: 15px;
     transition: 0.5s;
     max-width: 880px;
-    margin: 8rem auto;
+    margin: 7rem auto;
     margin-bottom: 14rem;
 }
 
@@ -38,8 +38,10 @@
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
-    margin-top: 1rem;
     color: #4b5563;
+    font-size: 18px;
+    align-items: flex-start;
+    justify-content: space-evenly;
 }
 
 .content-elem {
@@ -55,7 +57,7 @@
 }
 .content-title {
     margin-right: 0.5rem;
-    font-size: 0.75rem;
+    font-size: 0.85rem;
     line-height: 1rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -119,6 +121,7 @@
     color: #6b7280;
     align-items: center;
     word-break: break-all;
+    border-bottom-width: 3px;
 }
 
 .down-part-ctn .btns-ctn {
@@ -142,6 +145,8 @@
     cursor: pointer;
     border-radius: 30px;
     height: 50px;
+    text-shadow: 1px 0px rgb(0 0 0 / 50%);
+    letter-spacing: 0.18em;
     box-shadow: -1px -1px 6px 1px #0003, inset -5px -5px 15px #ffffff1a,
         5px 5px 15px #0000004d, -5px -5px 15px #ffffff1a;
 }
