--- a/src/components/Causes/MyCauses/MyCauses.module.css
+++ b/src/components/Causes/MyCauses/MyCauses.module.css
@@ -1,25 +1,28 @@
 #my-causes {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    gap: 5rem;
 }
 
 #my-causes .my-causes-title {
-    display: flex;
-    margin-top: 1.75rem;
+    margin-top: 5rem;
     margin-bottom: 1.75rem;
     color: #1d4ed8;
     font-size: 3rem;
     line-height: 1;
     font-weight: 500;
     line-height: 1.25;
-    text-align: center;
-    justify-content: center;
 }
 
 #my-causes .causes-ctn {
     display: flex;
-    margin-top: 1.75rem;
-    margin-bottom: 1.75rem;
+    flex-wrap: wrap;
+    align-content: center;
     justify-content: center;
-    gap: 5rem;
+    align-items: center;
+    gap: 100px;
 }
 
 #my-causes .no-articles-title {
@@ -37,6 +40,7 @@
 
 #my-causes .load-more-btn {
     display: inline-block;
+    width: 20%;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
     padding-left: 1.75rem;
@@ -44,14 +48,16 @@
     background-color: #2563eb;
     color: #ffffff;
     font-size: 0.875rem;
-    line-height: 1.25rem;
     font-weight: 500;
     line-height: 1.375;
     text-transform: uppercase;
     max-width: 24rem;
     border-radius: 0.25rem;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-        0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -1px rgb(0 0 0 / 6%);
+    position: relative;
+    overflow: hidden;
+    transition: 400ms;
+    cursor: pointer;
 }
 
 #my-causes .load-more-btn:hover {
