--- a/src/components/Causes/Catalog/Catalog.module.css
+++ b/src/components/Causes/Catalog/Catalog.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     gap: 100px;
     margin-top: 100px;
+    padding-bottom: 200px;
 }
 
 .catalog-title {
@@ -27,7 +28,7 @@
     align-content: center;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 100px;
 }
 
 .load-more-btn-cont {
