--- a/src/components/Causes/MyCauses/MyCauses.module.css
+++ b/src/components/Causes/MyCauses/MyCauses.module.css
@@ -4,10 +4,11 @@
     text-align: center;
     justify-content: center;
     gap: 5rem;
+    margin-top: 100px;
+    padding-bottom: 200px;
 }
 
 #my-causes .my-causes-title {
-    margin-top: 5rem;
     margin-bottom: 1.75rem;
     color: #1d4ed8;
     font-size: 3rem;
