--- a/src/components/Causes/MyCauses/JoinedCauses.module.css
+++ b/src/components/Causes/MyCauses/JoinedCauses.module.css
@@ -11,6 +11,8 @@
     justify-content: center;
     flex-direction: column;
     gap: 5rem;
+    margin-top: 100px;
+    padding-bottom: 200px;
 }
 
 #joined-causes .title {
