--- a/src/components/Causes/EditCause/EditCause.module.css
+++ b/src/components/Causes/EditCause/EditCause.module.css
@@ -7,6 +7,7 @@
         5px 5px 15px #0000004d, -5px -5px 15px #ffffff1a;
     border-radius: 15px;
     transition: 0.5s;
+    margin-top: 100px;
 }
 
 .title {
