title color changed

--- a/src/components/Causes/MyCauses/MyCauses.module.css
+++ b/src/components/Causes/MyCauses/MyCauses.module.css
@@ -10,7 +10,7 @@
 
 #my-causes .my-causes-title {
     margin-bottom: 1.75rem;
-    color: #1d4ed8;
+    color: #343e48;
     font-size: 3rem;
     line-height: 1;
     font-weight: 500;
