--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,8 +4,15 @@ body {
     min-height: 100%;
     width: 100%;
     padding-bottom: 60px;
+    max-width: 1880px;
 }
 
 label {
     cursor: pointer;
+}
+
+@media screen and (max-width: 1000px) {
+    body {
+        max-width: 350px;
+    }
 }
