--- a/src/components/Causes/Catalog/Catalog.module.css
+++ b/src/components/Causes/Catalog/Catalog.module.css
@@ -80,3 +80,6 @@
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
         0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
+
+@media screen and (max-width: 400px) {
+}
