--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,6 @@ nav {
     margin: 0 auto;
     padding: 0;
     width: 100%;
-    min-width: 535px;
     background-color: #343e48;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
     z-index: 100000;
@@ -32,7 +31,7 @@ nav ul {
     position: relative;
 }
 
-nav li {
+nav .nav-link {
     margin-right: 1.5rem;
     margin-left: 1.5rem;
     display: inline-block;
@@ -119,4 +118,59 @@ a:hover {
 .logged-ul {
     display: flex;
     align-items: center;
+}
+
+.mobile-menu {
+    display: none;
+    align-items: center;
+}
+
+.mobile-menu-btn {
+    display: inline-flex;
+    padding: 0.5rem;
+    color: #9ca3af;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.375rem;
+}
+
+.mobile-menu-btn:hover {
+    background-color: #374151;
+    color: #ffffff;
+}
+
+.mobile-menu-btn:focus {
+    box-shadow: var(--tw-ring-inset) 0 0 0
+        calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    --tw-ring-inset: inset;
+    --ring-color: #ffffff;
+    outline: 0;
+}
+
+@media screen and (max-width: 450px) {
+    nav {
+        max-width: 450px;
+        justify-content: space-between;
+    }
+
+    nav .nav-link {
+        margin-right: 0px;
+        margin-left: 0px;
+        display: none;
+    }
+
+    a {
+        padding: 12px 5px 12px 5px;
+    }
+
+    .mobile-menu {
+        display: flex;
+        margin-left: 1rem;
+        padding: 0.5rem;
+    }
+
+    .profile {
+        margin-right: 1rem;
+        padding: 0.5rem;
+    }
 }
