--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -147,6 +147,27 @@ a:hover {
     outline: 0;
 }
 
+.main-dropdown {
+    position: absolute;
+    left: 0;
+    top: 60px;
+    z-index: 10;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-top: 0.5rem;
+    background-color: #ffffff;
+    transform-origin: top right;
+    width: 12rem;
+    border-radius: 0.375rem;
+    box-shadow: var(--tw-ring-inset) 0 0 0
+        calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    --ring-color: #000000;
+    --ring-opacity: 0.05;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    font-size: 14px;
+}
+
 @media screen and (max-width: 450px) {
     nav {
         max-width: 450px;
