--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -125,3 +125,21 @@
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
         0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
+
+@media screen and (max-width: 450px) {
+    .home-title {
+        font-size: var(--mainTitle-fs-sm);
+    }
+
+    .home-quote {
+        font-size: 24px;
+    }
+
+    .home-quote-author {
+        font-size: 14px;
+    }
+
+    .latest-topics-title {
+        font-size: 21px;
+    }
+}
