--- a/src/components/Home/CardTemplate.module.css
+++ b/src/components/Home/CardTemplate.module.css
@@ -94,3 +94,13 @@
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
         0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
+
+@media screen and (max-width: 450px) {
+    .card-cont {
+        max-width: 300px;
+    }
+
+    .card-img {
+        height: 200px;
+    }
+}
