--- a/src/components/Causes/Catalog/Catalog.module.css
+++ b/src/components/Causes/Catalog/Catalog.module.css
@@ -81,5 +81,8 @@
         0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
+    .catalog-title {
+        font-size: var(--mainTitle-fs-sm);
+    }
 }
