--- a/src/components/Donate/Donate.module.css
+++ b/src/components/Donate/Donate.module.css
@@ -1,7 +1,7 @@
 #donate {
     position: absolute;
-    top: 50%;
-    right: 30%;
+    top: 47%;
+    right: 38%;
     transform: translate(0, -50%);
     box-shadow: inset 5px 5px 5px #0003, inset -5px -5px 15px #ffffff1a,
         5px 5px 15px #0000004d, -5px -5px 15px #ffffff1a;
@@ -15,13 +15,14 @@
     background-color: #fff;
     max-width: 32rem;
     border-radius: 0.5rem;
+    width: 430px;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
         0 8px 10px -6px rgb(0 0 0 / 0.1);
     border: 5px #f3f3f3ba solid;
 }
 
 #donate .reasons-ctn {
-    margin-bottom: 2rem;
+    margin-bottom: 2.5rem;
 }
 
 #donate .reasons-title {
@@ -30,7 +31,7 @@
     line-height: 2rem;
     font-weight: 600;
     letter-spacing: 0.025em;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 #donate .reasons-content {
@@ -46,7 +47,7 @@
 }
 
 #donate .curr-work-title {
-    margin-bottom: 0.75rem;
+    margin-bottom: 1rem;
     font-size: 1.125rem;
     line-height: 1.75rem;
     font-weight: 600;
@@ -59,11 +60,11 @@
 }
 
 #donate .p-ctn p {
-    margin-bottom: 4px;
+    margin-bottom: 8px;
 }
 
 #donate .btn-ctn {
-    padding-top: 2.5rem;
+    padding-top: 3rem;
 }
 
 #donate .btn {
@@ -94,4 +95,15 @@
     border-radius: 0.25rem;
     outline: 0;
     box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.5);
+}
+
+@media screen and (max-width: 450px) {
+    #donate {
+        right: 8%;
+        top: 45%;
+    }
+
+    #donate .donate-ctn {
+        width: 380px;
+    }
 }
