--- a/src/components/Causes/MyCauses/MyCauses.module.css
+++ b/src/components/Causes/MyCauses/MyCauses.module.css
@@ -85,3 +85,13 @@
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
         0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
+
+@media screen and (max-width: 450px) {
+    #my-causes .my-causes-title {
+        font-size: var(--mainTitle-fs-sm);
+    }
+
+    #my-causes .load-more-btn {
+        width: 45%;
+    }
+}
