--- a/src/components/Causes/MyCauses/MyCauses.module.css
+++ b/src/components/Causes/MyCauses/MyCauses.module.css
@@ -89,6 +89,8 @@
 @media screen and (max-width: 450px) {
     #my-causes .my-causes-title {
         font-size: var(--mainTitle-fs-sm);
+        font-weight: 700;
+        line-height: 1.1;
     }
 
     #my-causes .load-more-btn {
