--- a/src/components/ForgotPassword/ForgotPassword.module.css
+++ b/src/components/ForgotPassword/ForgotPassword.module.css
@@ -18,11 +18,7 @@
 
 #forgot-password .label {
     display: inline-block;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin: 0.5rem;
     color: #374151;
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -152,4 +148,18 @@
 #forgot-password .link-span {
     display: inline-block;
     color: #2563eb;
+}
+
+@media screen and (max-width: 450px) {
+    #forgot-password .title {
+        font-size: var(--mainTitle-fs-sm);
+    }
+
+    #forgot-password .forgotPass-form {
+        width: 75%;
+    }
+
+    #forgot-password .label {
+        font-size: 1.1rem;
+    }
 }
