styles for mobile updated

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -211,7 +211,10 @@ a:hover {
     }
 
     .profile {
-        margin-right: 1rem;
         padding: 0.5rem;
+    }
+
+    .dropdown {
+        width: 11rem;
     }
 }
