--- a/src/components/ChangePassword/ChangePassword.module.css
+++ b/src/components/ChangePassword/ChangePassword.module.css
@@ -33,11 +33,7 @@
 
 #change-password .label {
     display: inline-block;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin: 0.5rem;
     color: #374151;
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -173,4 +169,24 @@
     position: absolute;
     right: 8px;
     bottom: 12px;
+}
+
+@media screen and (max-width: 450px) {
+    #change-password .img-ctn {
+        display: none;
+    }
+
+    #change-password .content-ctn {
+        width: 70%;
+    }
+
+    #change-password .content-ctn .title {
+        font-size: var(--mainTitle-fs-sm);
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    #change-password .label {
+        font-size: 1.1rem;
+    }
 }
