--- a/src/components/MyProfile/MyProfile.module.css
+++ b/src/components/MyProfile/MyProfile.module.css
@@ -46,7 +46,8 @@
     margin-right: auto;
     background-color: #e0e7ff;
     height: 12rem;
-    border-radius: 9999px;
+    width: 12rem;
+    border-radius: 100%;
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 }
 
@@ -158,12 +159,8 @@
     }
 
     #my-profile .img-ctn .img {
-        margin-left: auto;
-        margin-right: auto;
-        background-color: #e0e7ff;
-        height: 10.5rem;
-        border-radius: 9999px;
-        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+        height: 8.5rem;
+        width: 8.5rem;
     }
 
     #my-profile .upload-ctn {
