--- a/src/components/Search/SearchElement.module.css
+++ b/src/components/Search/SearchElement.module.css
@@ -48,3 +48,9 @@
     background-color: #4f46e5;
     outline: 0;
 }
+
+@media screen and (max-width: 450px) {
+    .searchElement-container {
+        width: 90%;
+    }
+}
