--- a/src/components/Causes/CreateCause/CreateCause.module.css
+++ b/src/components/Causes/CreateCause/CreateCause.module.css
@@ -19,10 +19,7 @@
 
 .form-input {
     display: block;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0.5rem 1rem;
     margin: 0;
     background-clip: padding-box;
     background-color: #ffffff;
@@ -49,10 +46,7 @@
 
 .form-desc {
     display: block;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0.75rem 1rem;
     margin-bottom: 0.75rem;
     background-color: #ffffff;
     color: #374151;
@@ -89,10 +83,7 @@
 .submit-btn {
     width: 50%;
     display: inline-block;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
+    padding: 0.75rem 1.75rem;
     background-color: #2563eb;
     color: #ffffff;
     font-size: 0.875rem;
@@ -131,7 +122,7 @@
 
 @media screen and (max-width: 450px) {
     .create-cause-ctn {
-        max-width: 90%;
+        max-width: 85%;
         margin-top: 150px;
         border-radius: 16px;
     }
