styles for tablet implemeted

--- a/src/components/Causes/Catalog/Catalog.module.css
+++ b/src/components/Causes/Catalog/Catalog.module.css
@@ -86,3 +86,9 @@
         font-size: var(--mainTitle-fs-sm);
     }
 }
+
+@media screen and (max-width: 900px) {
+    .catalog-title {
+        font-size: var(--mainTitle-fs-md);
+    }
+}
