--- a/src/components/Search/SearchElement.module.css
+++ b/src/components/Search/SearchElement.module.css
@@ -54,3 +54,9 @@
         width: 90%;
     }
 }
+
+@media screen and (max-width: 900px) {
+    .searchElement-container {
+        width: 70%;
+    }
+}
